--- a/webgoat-lessons/sql-injection/src/main/resources/i18n/WebGoatLabels.properties
+++ b/webgoat-lessons/sql-injection/src/main/resources/i18n/WebGoatLabels.properties
@@ -69,6 +69,14 @@ SqlStringInjectionHint.9.3=Make use of DML to change your salary.
 SqlStringInjectionHint.9.4=Make sure that the resulting query is syntactically correct.
 SqlStringInjectionHint.9.5=How about something like '; UPDATE employees....
 
+sql-injection.11.success=<span class='feedback-positive'>Well done! Now you are earning the most money. And at the same time you successfully compromised the integrity of data by changing the salary!</span>
+sql-injection.11.one=<span class='feedback-negative'>Still not earning enough! Better try again and change that.</span>
+SqlStringInjectionHint.11.1=Try to find a way, to chain another query to the end of the existing one.
+SqlStringInjectionHint.11.2=Use the ; metacharacter to do so.
+SqlStringInjectionHint.11.3=Make use of DML to change your salary.
+SqlStringInjectionHint.11.4=Make sure that the resulting query is syntactically correct.
+SqlStringInjectionHint.11.5=How about something like '; UPDATE employees....
+
 sql-injection.10.success=<span class='feedback-positive'>Success! You successfully deleted the access_log table and that way compromised the availability of the data.</span>
 sql-injection.10.entries=<span class='feedback-negative'>There is still evidence of what you did. Better remove the whole table.</span>
 
